# aws-lambda-nix-haskell

./: default.nix
foo/: Main.hs  default.nix  foo.cabal  pkg.nix
foo/src/: Lib.hs
nix/: pkgs.nix
