name:                foo
version:             0.1.0.0
author:              Takt, Inc.
maintainer:          renzo@takt.com
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Lib
  build-depends:       base,
                       aeson,
                       aws-lambda-haskell-runtime,
                       bytestring
  default-language:    Haskell2010
  hs-source-dirs:      src

executable foo
  main-is:             Main.hs
  build-depends:       base,
                       aws-lambda-haskell-runtime,
                       foo
  default-language:    Haskell2010
